# pySPFM

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  MANIFEST.in  Makefile  README.md  pylops_sim.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: artifact_path  config.yml
.github/: FUNDING.yml  config.yml  copilot-instructions.md  pull_request_template.md
.github/workflows/: python-publish.yml
docs/: Makefile  api.md  api.rst  cli.md  cli.rst  conf.py  examples.md  examples.rst  hemodynamic deconvolution.md  hemodynamic deconvolution.rst  index.md  index.rst  installation.md  installation.rst  outputs.md  outputs.rst  references.bib  usage.md  usage.rst
docs/_static/: custom.css  theme_overrides.css
docs/_templates/: class.md  function.md  layout.html  module.md
docs/api/: cli.md  decomposition.md  deconvolution.md  io.md  utils.md  workflows.md
docs/notebooks/: examples.ipynb  stability_selection.ipynb
docs/sphinxext/: github_link.py
pySPFM/: __about__.py  __init__.py  _utils.py  _version.py  base.py  decomposition.py  due.py  io.py  jobqueue.yaml  pySPFM.py  utils.py
pySPFM/_solvers/: __init__.py  debiasing.py  fista.py  hrf_generator.py  lars.py  select_lambda.py  spatial_regularization.py  stability_selection.py
pySPFM/cli/: __init__.py  _preprocessing.py  auc_to_estimates.py  legacy_spfm.py  run.py
pySPFM/deconvolution/: __init__.py  debiasing.py  fista.py  hrf_generator.py  lars.py  select_lambda.py  spatial_regularization.py  stability_selection.py  threshold_auc.py
pySPFM/tests/: conftest.py  test_auc_to_estimates.py  test_base.py  test_circleci_conda_setup.py  test_cli.py  test_debiasing.py  test_decomposition.py  test_docstring_validation.py  test_documentation_examples.py  test_fista.py  test_hrf_generator.py  test_integration.py  test_io.py  test_lars.py  test_parser_utils.py  test_preprocessing.py  test_regressors.py  test_select_lambda.py  test_spatial_regularization.py  test_stability_selection.py  test_utils.py  test_utils_coverage.py  utils.py
pySPFM/tests/data/: auc_to_estimates_outputs.txt  lars_integration_outputs.txt  nih_five_echo_outputs_verbose.txt  pylops_fista.npy  sim_data.npy  sim_hrf.npy  stability_integration_outputs.txt
pySPFM/workflows/: __init__.py  auc_to_estimates.py  parser_utils.py  pySPFM.py
