[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 99
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
  )/
  | get_version.py
  | versioneer.py
  | pySPFM/_version.py
  | pySPFM/due.py
)
ignore = BLK100
'''

[tool.isort]
profile = "black"
multi_line_output = 3
