[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pySPFM"
description = "Sparse hemodynamic deconvolution of fMRI data with scikit-learn compatible estimators."
readme = "README.md"
authors = [{name = "Eneko Uruñuela"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = [
    "fmri",
    "deconvolution",
    "hemodynamic",
    "neuroimaging",
    "sparse",
    "paradigm-free-mapping",
]
dependencies = [
    "dask",
    "dask_jobqueue",
    "distributed",
    "jax",
    "jaxlib",
    "nibabel",
    "nilearn>=0.10.0",
    "numpy>=1.22",
    "pylops>=1.18.2",
    "pyproximal>=0.4.0",
    "pywavelets",
    "scipy>=1.9.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Paradigm-Free-Mapping/pySPFM"
Documentation = "https://pySPFM.readthedocs.io"
Repository = "https://github.com/Paradigm-Free-Mapping/pySPFM"
Changelog = "https://github.com/Paradigm-Free-Mapping/pySPFM/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pre-commit"]
doc = [
    "ipykernel",
    "matplotlib",
    "myst_nb",
    "sphinx",
    "sphinx_copybutton",
    "sphinx_rtd_theme>=1.2.2",
    "sphinx-argparse",
    "sphinxcontrib-bibtex",
    "sphinx_design",
    "sphinx_gallery",
    "sphinx-book-theme",
    "sphinx_charts",
    "sphinxcontrib-jquery",
]

tests = [
    "codecov",
    "coverage",
    "pytest",
    "pytest-cov>=4.0.0",
    "pytest-console-scripts",
    "requests",
    "ruff",
]

# Aliases
all = ["pySPFM[dev,doc,tests]"]

[project.scripts]
# Main CLI command with subcommands (sparse, lowrank, stability)
pySPFM = "pySPFM.cli.run:main"
# AUC to estimates workflow
auc_to_estimates = "pySPFM.cli.auc_to_estimates:_main"

#
# Hatch configurations
#

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]  # No longer needed in sdist

[tool.hatch.build.targets.wheel]
exclude = [
    "pySPFM/tests/data",  # Large test data directory
]

##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pySPFM/_version.py"

#
# Developer tool configurations
#

[tool.ruff]
line-length = 99
target-version = "py310"
exclude = [
    ".eggs",
    ".git",
    ".github",
    ".hg",
    ".pytest_cache",
    ".testing_data_cache",
    "_build",
    "build",
    "dist",
    "pySPFM/_version.py",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E203",   # whitespace before ':'
    "E402",   # module level import not at top of file
    "N802",   # function name should be lowercase
    "N803",   # argument name should be lowercase (X is standard in sklearn)
    "N806",   # variable in function should be lowercase
    "N999",   # invalid module name (pySPFM is intentional)
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D401",   # first line should be in imperative mood
    "D403",   # first word of first line should be capitalized
    "B006",   # mutable default argument (used intentionally in some cases)
    "SIM102", # nested if statements (sometimes clearer)
    "SIM108", # ternary operator (sometimes less readable)
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"pySPFM/tests/*" = ["D"]
"pySPFM/due.py" = ["D", "E", "W"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["pySPFM"]

[tool.pydocstringformatter]
write = true
strip-whitespaces = true
max-summary-lines = 1

[tool.coverage.run]
branch = true
omit = [
    "pySPFM/tests/*",
    "*/__init__.py",
    "pySPFM/_version.py",
    "pySPFM/due.py",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    'raise NotImplementedError',
    'warnings\.warn',
]

[tool.pytest]
log_cli = true
