[metadata]
url = https://github.com/pySPFM/pySPFM
license = LGPL 2.1
author = "Eneko Uruñuela"
author_email = "e.urunuela@bcbl.eu"
maintainer = "Eneko Uruñuela"
maintainer_email = "e.urunuela@bcbl.eu"
description = "A python package for Paradigm Free Mapping (3dPFM and 3dMEPFM)."
description-file = README.md
long_description =
    # pySPFM
    A python package for Paradigm Free Mapping (3dPFM and 3dMEPFM).
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.6
install_requires =
    nibabel
    nilearn
    numpy<1.21
    pylops>=1.18.2
    pyproximal
    pywavelets
packages = find:
include_package_data = False

[options.extras_require]
doc =
    sphinx>=1.5.3
    sphinx_rtd_theme
tests =
    codecov
    coverage<5.0
    flake8>=3.7
    flake8-black
    flake8-isort
    pytest
    pytest-cov
dev =
    versioneer
all =
    %(doc)s
    %(tests)s

[options.entry_points]
console_scripts =
    pySPFM = pySPFM.pySPFM:_main

[options.package_data]
* =
    resources/*
    tests/data/*

[versioneer]
VCS = git
style = pep440
versionfile_source = pySPFM/_version.py
versionfile_build = pySPFM/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
exclude=*build/
ignore = E203,E402,W503
per-file-ignores =
    */__init__.py:F401

[tool:pytest]
log_cli = true
